Move the next video button out of the screen to avoid blocking content

--- a/src/styles/components/control.scss
+++ b/src/styles/components/control.scss
@@ -171,7 +171,7 @@
         }
     }
     &.hidden{
-        right: -200px;
+        right: -100%;
         opacity: 0;
     }
 
